# ai-engineer-task-saitarun47

./: README.md  after_review.docx  app.py  before_review.docx  main.py  output_json.json  pyproject.toml  requirements.txt  utils.py
lancedb/adgm_regs.lance/_transactions/: 0-6767d3ef-a304-4f6d-bc81-f6e57c9478db.txn  1-200c4f09-c410-47ae-8feb-a479a2cadb77.txn  10-18fa83f3-ee72-46e7-a18a-eeb591bb2940.txn  100-4c781b2d-89f9-41ae-9b8b-e023bfe97046.txn  101-c01361b6-5273-4cc4-91ea-db8c58a9ad6a.txn  102-20acf6f9-7fc4-4ef1-9f2a-e30de61c4024.txn  103-3b975d0b-a92d-44f2-82cc-3e20a49def35.txn  104-35f453d7-4448-4330-bfe7-2c2bb0c56623.txn  105-1926f689-cbc6-4360-926a-59831930757c.txn  106-437d47f5-f2b9-435b-968d-cbb930267361.txn  107-94602853-38bf-48fa-bdcd-6f37eeabab21.txn  108-e7ae3550-c7d9-4342-89a8-5797398b0641.txn  109-3c164324-861a-4082-a374-0a5b86a0b0bd.txn  11-6225afa8-ee94-404c-ae44-85ea362a7fcd.txn  110-8ce322e5-6c05-4263-93c6-39bb89e3d7c4.txn  111-cbf72982-e245-4a1d-9ea3-513dd5e37420.txn  112-bd7576e5-2499-4f28-96ef-7b29db547d11.txn  113-6ad300dd-5779-470b-b70f-db6588aafc14.txn  114-aa435820-9278-4824-a1a4-00a7d1054297.txn  115-c6469ede-86e9-4bfc-be1f-f3e3f5c7a20d.txn  116-e395f595-3480-4853-b08c-6148cf20cc29.txn  117-d5d7be96-3b2c-4817-95af-66a68ed6eba6.txn  118-7a249907-02f2-43dd-ad2a-2f4da5575e1f.txn  119-c9530eae-106e-45f6-9d37-e7c3a6a52779.txn  12-a46f1cc5-5b16-4e5a-8dd1-80788eeb81d0.txn  120-87bdbbc2-6110-4b68-bd6d-f745d37592c7.txn  121-a4dd73c0-b149-478b-86f8-97808c6a25b2.txn  122-6d8eb745-fed7-4aab-a160-45184e797779.txn  13-1782542b-3bd2-4390-9bf9-ff95a4ea0654.txn  (+667 more)
(+1391 files in other folders)
